--- a/src/components/introduction/intro.css
+++ b/src/components/introduction/intro.css
@@ -1,11 +1,8 @@
 .intro {
     display: flex;
     height: 100vh;
-    background-color: blue;
-}
-
-.intro-wrapper {
-    padding: 50px;
+    background-color: #010401;
+    color: #efefef;
 }
 
 .intro-heading {
@@ -21,6 +18,32 @@
 .intro-title-wrapper {
     height: 100%;
     animation: move 8s ease-out infinite alternate;
+}
+
+.intro-title-item {
+    height: 50px;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.intro-left {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.intro-left-wrapper {
+    padding: 50px;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.intro-right {
+    flex: 1;
 }
 
 @keyframes move {
@@ -39,19 +62,4 @@
     100% {
         transform: translateY(-200px);
     }
-}
-
-.intro-title-item {
-    height: 50px;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-}
-
-.intro-left {
-    flex: 1;
-}
-
-.intro-right {
-    flex: 1;
 }
