--- a/src/components/introduction/intro.css
+++ b/src/components/introduction/intro.css
@@ -44,7 +44,37 @@
 
 .intro-right {
     flex: 1;
+    position: relative;
 }
+
+.intro-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    position: absolute;
+    clip-path: polygon(25% 12.5%, 75% 12.5%, 100% 50%, 75% 87.5%, 25% 87.5%, 0% 50%);
+    transition: all 1s ease-in-out;
+}
+
+.intro-right:hover .intro-img {
+    transform: translateY(-20px);
+}
+
+.intro-right:hover .intro-bg {
+    transform: translateX(40px);
+}
+
+.intro-bg {
+    clip-path: polygon(25% 12.5%, 75% 12.5%, 100% 50%, 75% 87.5%, 25% 87.5%, 0% 50%);
+    background-color: #efefef;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 12.5%;
+    transition: all 1s ease-in-out;
+}
+
 
 @keyframes move {
     25% {
