--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,29 @@
 .contact {
   height: 100vh;
+  background-color: #010401;
+  color: #efefef;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+.email-button{
+    margin: auto;
+    border: 2px solid #efefef;
+    color:#efefef;
+    text-decoration: none;
+    padding: 1vh 2vw;
+}
+
+.social-links {
+  padding: 1vh 1vw;
+}
+
+.social-links a{
+    padding: 1vh 1vw;
+    color: #efefef;
+}
+.divider {
+  color: #efefef;
+  width: 90%;
 }
