--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,5 +1,5 @@
 .contact {
-  height: 40vh;
+  height: 30vh;
   background-color: #010401;
   color: #efefef;
   display: flex;
@@ -13,16 +13,25 @@
   color: #efefef;
   text-decoration: none;
   padding: 1vh 2vw;
+  transition: all 750ms;
+}
+
+.email-button:hover {
+    color: #010401;
+    background-color: #efefef;
 }
 
 .social-links {
-  padding: 1vh 1vw;
+  padding: 5vh 1vw 5vh 1vw;
 }
 
 .social-links a {
   padding: 1vh 1vw;
   color: #efefef;
+
 }
+  
+
 .divider {
   color: #efefef;
   width: 90%;
