--- a/src/components/introduction/intro.css
+++ b/src/components/introduction/intro.css
@@ -1,95 +1,110 @@
 .intro {
-    display: flex;
-    height: 100vh;
-    background-color: #010401;
-    color: #efefef;
+  display: flex;
+  height: 100vh;
+  background-color: #010401;
+  color: #efefef;
 }
 
 .intro-heading {
-    font-size: 30px;
-    font-weight: 300;
+  font-size: 30px;
+  font-weight: 300;
 }
 
 .intro-title {
-    height: 50px;
-    overflow: hidden;
+  height: 50px;
+  overflow: hidden;
 }
 
 .intro-title-wrapper {
-    height: 100%;
-    animation: move 8s ease-out infinite alternate;
+  height: 100%;
+  animation: move 8s ease-out infinite alternate;
 }
 
 .intro-title-item {
-    height: 50px;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
+  height: 50px;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
 }
 
 .intro-left {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .intro-left-wrapper {
-    padding: 50px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  padding: 50px;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .intro-right {
-    flex: 1;
-    position: relative;
+  flex: 1;
+  position: relative;
 }
 
 .intro-img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    position: absolute;
-    clip-path: polygon(25% 12.5%, 75% 12.5%, 100% 50%, 75% 87.5%, 25% 87.5%, 0% 50%);
-    transition: all 1s ease-in-out;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: absolute;
+  clip-path: polygon(
+    25% 12.5%,
+    75% 12.5%,
+    100% 50%,
+    75% 87.5%,
+    25% 87.5%,
+    0% 50%
+  );
+  transition: all 1s ease-in-out;
+  background: url("../../images/lc-2.png");
+  background-repeat: no-repeat;
 }
 
 .intro-right:hover .intro-img {
-    transform: translateY(-20px);
+  transform: translateY(-20px);
 }
 
 .intro-right:hover .intro-bg {
-    transform: translateX(40px);
+  transform: translateX(40px);
 }
 
 .intro-bg {
-    clip-path: polygon(25% 12.5%, 75% 12.5%, 100% 50%, 75% 87.5%, 25% 87.5%, 0% 50%);
-    background-color: #efefef;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 12.5%;
-    transition: all 1s ease-in-out;
+  clip-path: polygon(
+    25% 12.5%,
+    75% 12.5%,
+    100% 50%,
+    75% 87.5%,
+    25% 87.5%,
+    0% 50%
+  );
+  background-color: #efefef;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 12.5%;
+  transition: all 1s ease-in-out;
 }
 
-
 @keyframes move {
-    25% {
-        transform: translateY(-50px);
-    }
+  25% {
+    transform: translateY(-50px);
+  }
 
-    50% {
-        transform: translateY(-100px);
-    }
+  50% {
+    transform: translateY(-100px);
+  }
 
-    75% {
-        transform: translateY(-150px);
-    }
+  75% {
+    transform: translateY(-150px);
+  }
 
-    100% {
-        transform: translateY(-200px);
-    }
+  100% {
+    transform: translateY(-200px);
+  }
 }
