--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-items: center;
 }
-.email-button {
+.contact-button {
   margin: auto;
   border: 2px solid #efefef;
   color: #efefef;
@@ -16,7 +16,7 @@
   transition: all 750ms;
 }
 
-.email-button:hover {
+.contact-button:hover {
     color: #010401;
     background-color: #efefef;
 }
