--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -31,8 +31,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 50%);
   grid-template-rows: 33.3% 33.3% 33.3%;
-  /* grid-auto-rows: 0px; */
-  /* grid-template-columns: 50% 50% 50% 50% 50% 50% 50%; */
+  grid-auto-rows: 0px;
+  grid-template-columns: 50% 50% 50% 50% 50% 50% 50%;
   animation: moveSkills 10s ease-out infinite alternate;
   animation-delay: 3s;
 }
